# crazy-kusa-back-end

./: .env  Cargo.toml  README.md  config.yaml
assets/raw/: data_2023-10-12_23-45-44.json  data_2023-10-23_1-23-54.json
key/: cert.pem  csr.pem  key.pem
src/: db.rs  file_handling.rs  main.rs  mongo_connect.rs  server.rs
src/database/: mongodb.rs
src/models/: idea_model.rs  mod.rs  user_model.rs
src/route/: idea_api.rs  mod.rs  user_api.rs
src/server/: mongo.rs  mongo_class.rs  mongo_connect.rs  route.rs
