[package]
name = "housing-trend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = "0.11"
tokio = {version = "1.32.0", features = ["full"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.8"
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
actix-rt = "2.6"
futures = "0.3.29"

[dependencies.mongodb]
version = "2.7.0"
features = ["tokio-runtime"]